# diffusion

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_and_test.yml
cmake/: compile_options.cmake
include/: engine.h  event.h  project.h  renderer.h
include/core/: dynamic_array.h  file.h  math.h  slice.h  time.h
include/core/math/: matrix_4x4.h  vector_2.h  vector_3.h  vector_4.h
include/core/memory/: dynamic_array.h  dynamic_array_element_reference.h  slice.h  span.h
include/platform/: vulkan.h  window.h
include/platform/win32/: win32_types.h  win32_utils.h
include/rendering/: device.h  frame.h  frame_data.h  frame_sync.h  render_context.h  render_device.h  renderer.h  swapchain.h  triangle_pipeline.h  vk_utils.h
include/rendering/camera/: camera_data.h
include/rendering/frame/: frame.h  frame_gpu_data.h
include/rendering/memory/: gpu_allocated_buffer.h  gpu_allocation.h  gpu_memory.h  gpu_span.h  gpu_sub_allocation.h  rebar_gpu_allocator.h  utils.h
include/rendering/model/: gpu_mesh.h  mesh.h  vertex.h
include/rendering/scene/: scene_data.h
shaders/: CMakeLists.txt  triangle.slang
src/: engine.c  main.c  project.c.in  renderer.c
src/core/: dynamic_array.c  file.c  math.c  slice.c  time.c
src/core/math/: matrix4x4.c  vector_3.c
src/core/memory/: dynamic_array.c  dynamic_array_element_reference.c  slice.c  span.c
src/platform/: vulkan.c
src/platform/win32/: win32_utils.c  window.c
src/rendering/: device.c  frame.c  frame_data.c  frame_sync.c  render_context.c  render_device.c  renderer.c  swapchain.c  triangle_pipeline.c  vk_utils.c
src/rendering/frame/: frame.c  frame_gpu_data.c  frame_sync.c
src/rendering/memory/: gpu_allocated_buffer.c  gpu_allocation.c  gpu_memory.c  rebar_gpu_allocator.c
src/rendering/model/: gpu_mesh.c
standalone/: CMakeLists.txt
test/: CMakeLists.txt
test/include/: test.h
test/src/core/: dynamic_array_tests.c  math_tests.c
test/src/core/math/: matrix4x4_tests.c
test/src/core/memory/: dynamic_array_tests.c
